# pex

./: .bumpversion.cfg  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  entrypoint.sh  pyproject.toml  pytest.ini
.github/workflows/: pipeline.yml  push.yml  tag.yml
docs/: arch.drawio
src/: conftest.py
src/pex/: __init__.py  app.py  config.py
tests/: conftest.py  test_pex.py
