[tool.poetry]
name = "pex"
version = "0.5.2"
description = "Python Example Project"
authors = ["Jamie Moore"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.2"
pylint = "^2.6.0"
flake8 = "^3.8.4"
bandit = "^1.7.0"
pytest-sugar = "^0.9.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
